# nodio

./: Cargo.toml
crates/nodio-api/: Cargo.toml
crates/nodio-app/: Cargo.toml  build.rs
crates/nodio-app/src/: main.rs  slider.rs
crates/nodio-core/: Cargo.toml
crates/nodio-core/src/: lib.rs
crates/nodio-gui-nodes/: Cargo.toml
crates/nodio-gui-nodes/src/: lib.rs  link.rs  style.rs
crates/nodio-win32/: Cargo.toml
crates/nodio-win32/src/: context.rs  device.rs  session.rs
